<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/oval_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/oval" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="40dp"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginStart="14dp"
            android:layout_marginTop="11dp"
            android:text="@string/title_desc"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/thingRecyclerView"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@id/headerLayout"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/headerLayout"
        android:padding="20dp"
        android:layout_marginTop="11dp"
        android:layout_alignTop="@id/thingRecyclerView"
        android:background="@color/light_orange"
        android:layout_centerInParent="true">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/body_font_size"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:textColor="@color/dark_grey"
        android:text="@string/chosen_thing" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/thingsItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/light_orange"
            android:layout_centerInParent="true"
            android:paddingTop="20dp"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/headline_font_size"
            android:textStyle="bold"
            android:textColor="@color/dark_grey"
            tools:text="@string/test_full" />
    </RelativeLayout>

</RelativeLayout>